kubernetes/szilardshome/temp/argocd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
  - "argocd-local.szilardshome.com"
  rules:
  - matches:
    - path:
        type: PathPrefix 
        value: /
    backendRefs:
        - name: argocd-server
          port: 80
